added search by name

--- a/movieapp/Base.lproj/Main.storyboard
+++ b/movieapp/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="akf-lF-n3f">
-                                <rect key="frame" x="0.0" y="27" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="162" width="414" height="806.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="zvP-35-2wp">
                                     <size key="itemSize" width="160" height="280"/>
@@ -102,19 +102,34 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите название фильма" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KWt-gy-oBT">
+                                <rect key="frame" x="30" y="108" width="354" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="354" id="5Kz-aA-5bz"/>
+                                    <constraint firstAttribute="height" constant="34" id="6ki-RG-CzO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="onInput:" destination="BYZ-38-t0r" eventType="editingChanged" id="KPQ-SL-vy2"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="akf-lF-n3f" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Km7-pU-nvJ"/>
-                            <constraint firstItem="akf-lF-n3f" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="gtI-gC-duO"/>
-                            <constraint firstItem="akf-lF-n3f" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="rmC-c5-6vY"/>
+                            <constraint firstItem="akf-lF-n3f" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.9" id="NAE-7u-cHb"/>
+                            <constraint firstItem="akf-lF-n3f" firstAttribute="top" secondItem="KWt-gy-oBT" secondAttribute="bottom" constant="20" id="QUr-aw-gcX"/>
+                            <constraint firstItem="KWt-gy-oBT" firstAttribute="centerX" secondItem="akf-lF-n3f" secondAttribute="centerX" id="WLa-fb-xcV"/>
+                            <constraint firstItem="KWt-gy-oBT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="iIt-2g-Fbk"/>
                             <constraint firstItem="akf-lF-n3f" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="uwT-Dj-lxG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wde-zq-2N1"/>
                     <connections>
                         <outlet property="collectionView" destination="akf-lF-n3f" id="6AS-an-VCi"/>
+                        <outlet property="textField" destination="KWt-gy-oBT" id="ZdG-nc-Wtg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
